# health-chatbot

./: .env.template  AGENTS.md  ARCHITECTURE.md  BACKEND.md  BACKEND_FIX.md  BCRYPT_FIX.md  CLAUDE.md  COMPLETE_SUMMARY.md  COPILOT.md  CREDENTIALS.md  DOCKER_GUIDE.md  FRONTEND.md  INTEGRATION_GUIDE.md  MOCK_DATA_REMOVAL.md  PYTHON313_FIX.md  QUICKSTART.md  README.md  REBUILD_PLAN.md  SETUP.md  SUMMARY.md  TESTING_GUIDE.md  docker-compose.yml  fix-backend-deps.bat  install-backend-deps.bat  seed-database.bat  start-backend-fast.bat  start-backend-uv.bat  start-backend.bat  start-frontend.bat
healthcare-api/: .dockerignore  .env.example  Dockerfile  Gemini.md  README.md  main.py  postman_collection.json  pyproject.toml  requirements.txt  seed_database.py  seed_enhanced.py
healthcare-api/app/: dependencies.py  exceptions.py  main.py  security.py
healthcare-api/app/config/: database.py
healthcare-api/app/models/: chat.py  document.py  patient.py  report.py  user.py
healthcare-api/app/routes/: auth.py  chat.py  document.py  patient.py  report.py
healthcare-api/app/services/: agent_service.py  context_builder.py  guardrails.py  health_report_agent.py  ocr_service.py  prompts.py  storage_service.py
healthcare-api/app/utils/: logger.py  logging_middleware.py  tools.py
healthcare-api/data/chromadb/: chroma.sqlite3
healthcare-api/logs/: daily.log.2026-01-31
medicare-chat/: .dockerignore  .env.example  Dockerfile  index.html  tailwind.config.ts
medicare-chat/src/: App.tsx  index.css
medicare-chat/src/components/: AboutModal.tsx  EmptyState.tsx  Logo.tsx  (+3 more)
(+18 files in other folders)
